--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -14,7 +14,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: yarn install
+      - run: yarn i
       - save_cache:
           paths:
             - node_modules
