--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8.10
+      - image: circleci/node:8.10-stretch
     working_directory: ~/repo
     steps:
       - checkout
@@ -26,7 +26,7 @@ jobs:
             - node_modules/
   test:
     docker:
-      - image: circleci/node:9.7.1
+      - image: circleci/node:8.10-stretch
     steps:
       - checkout
       - run: yarn test
