--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -16,7 +16,7 @@ jobs:
             - yarn-packages-
       - run:
           name: Install Dependencies
-          command: yarn i
+          command: yarn install --frozen-lockfile
       - save_cache:
           name: Save Yarn Package Cache
           key: yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
