chore: disable workflows

--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -30,11 +30,11 @@ jobs:
       - checkout
       - run: yarn test
 
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+# workflows:
+#   version: 2
+#   build_and_test:
+#     jobs:
+#       - build
+#       - test:
+#           requires:
+#             - build
