chore: deploy master only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,4 +113,4 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              ignore: /.*/
+              only: master
